# Doc2Abst-Generation-with-DeepSeek-R1

./: .gitignore  .python-version  pyproject.toml
checkpoints/checkpoint-100/: rng_state.pth
src/: eval.py  test.py  train.py
